--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
             >Ver mais</a
           >
         </div>
+        <div class="card">
+          <h4>Conversor de Moedas</h4>
+          <p>Projeto de Conversor que consome API de cotações em tempo real.</p>
+          <a
+            href="https://dariotertius.github.io/conversordemoedas/"
+            target="_blank"
+            >Ver mais</a
+          >
+        </div>
       </div>
     </section>
 
